# microconf

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
cmake/: mconf_config.h.in  microconfConfig.cmake.in
docs/: API_REFERENCE.md  COOKBOOK.md  DESIGN.md  ISSUES.md  PORTING_GUIDE.md  VERIFICATION.md
include/: mconf.h  mconf_config.h
src/: mconf.c
tests/: Makefile  test_all.c
tests/compile_fail/: README.md  conflicting_config.c  invalid_schema_count.c  invalid_string_default.c
tests/consumers/add_subdirectory/: CMakeLists.txt  main.c
tests/consumers/cpp/: CMakeLists.txt  consumer_cpp11.cpp  consumer_cpp17.cpp  consumer_cpp20.cpp
tests/consumers/find_package/: CMakeLists.txt  main.c
